docs: revise the fulltext plans against the JDK 21 baseline
The JDK 21 bump (#1518) landed in dev and invalidated the version claims the
fulltext research and prototype plans were written against. Re-verified every
pom and Dockerfile anchor and revised the affected passages in place.

P6 §3 is rewritten around the split the bump created: the version half of the
entry condition is satisfied, the module-wiring half is not. jVector's
VectorizationProvider tests two conditions and only the first now passes, so it
still selects the scalar DefaultVectorizationProvider, still warns and still
reports no error - the measurement trap survives the bump intact and is more
dangerous now that "we are on JDK 21" reads like a green light. Item 1 of the
five coordinated changes is corrected to `requires static`, which
2026-09-10-simd-vector-api-feasibility settled after rejecting a hard requires,
and items 2-4 are recorded as that record's #1541 to fund rather than P6's.

P5's rejected "start on Lucene 10.x right away" variant is re-opened, as its own
text said it should be once java.version really became 21. Half the rejection
expired with the baseline; the other half - zero value gained, no class we call
behaves differently - survives untouched, so the choice now rests on the support
window alone (P5-3).

The driver's new release-17 floor is recorded as a hard placement constraint for
both plans: the six modules pinned by java.driver.release are off limits to the
Lucene analyzers and the vector mathematics alike, which retroactively confirms
P5 §3.2's hand-traced argument for evita_engine. P5 §4.3's virtual-thread
hypothetical is closed by 2026-09-10-jdk21-virtual-threads-and-scoped-values.
The mmap table in bitmap-memory-optimizations.md is re-headed with the finding
that its column headers moved but not one cell did - 21 buys nothing there.

Also updates research.md (Z1, §5.1, the corrections list), management-summary.md
and the reciprocal relates/related-work links in the two J